@@ -1,3 +1,7 @@
+2020-02-16  Kingpin  <martin@ubuntu>
+
+	* Wrapper.pm: allow IP address to be expressed as a netmask
+
 2016-02-06  Kingpin  <martin@localhost.localdomain>
 
 	* Wrapper.pm (if_ipaddr): force locale when running ifconfig command
